--- a/battcn-auth/src/main/resources/bootstrap.yml
+++ b/battcn-auth/src/main/resources/bootstrap.yml
@@ -11,19 +11,15 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 192.168.1.13:8848
-#        ext-config:
-#          - refresh: true
-#            data-id: app.properties
-#            group: multi-data-ids
+        server-addr: localhost:8848
       discovery:
-        server-addr: 192.168.1.13:8848
-  datasource:
-    url: jdbc:mysql://192.168.1.13:3306/cloud?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
-    username: root
-    password: NewPass4!
-    driver-class-name: com.mysql.jdbc.Driver
+        server-addr: localhost:8848
+  cache:
+    type: redis
+    redis:
+      cache-null-values: true
 logging:
   level:
     com.battcn: debug
     org.springframework.security: DEBUG
+    org.springframework.jdbc: debug
