--- a/battcn-framework/oauth2-spring-cloud-starter/pom.xml
+++ b/battcn-framework/oauth2-spring-cloud-starter/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.battcn</groupId>
     <artifactId>oauth2-spring-cloud-starter</artifactId>
     <packaging>jar</packaging>
+    <version>1.0.0</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -24,6 +25,19 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
