优化目录结构

--- a/battcn-auth/pom.xml
+++ b/battcn-auth/pom.xml
@@ -3,38 +3,31 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.battcn</groupId>
+        <artifactId>battcn</artifactId>
+        <version>1.1.0</version>
     </parent>
-    <groupId>com.battcn</groupId>
     <artifactId>battcn-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>battcn-auth</name>
-    <description>Demo project for Spring Boot</description>
+    <description>auth-server 认证中心</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
-        <nacos-config-spring-cloud.version>0.2.1.RELEASE</nacos-config-spring-cloud.version>
         <security.oauth.version>2.3.3.RELEASE</security.oauth.version>
     </properties>
 
 
     <dependencies>
-       <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.40</version>
+            <version>${mysql.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${security.oauth.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -42,12 +35,17 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${security.oauth.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
