--- a/battcn-auth/src/main/resources/bootstrap.yml
+++ b/battcn-auth/src/main/resources/bootstrap.yml
@@ -18,6 +18,7 @@ spring:
     type: redis
     redis:
       cache-null-values: true
+      time-to-live: 7200s
 logging:
   level:
     com.battcn: debug
