--- a/battcn-user/pom.xml
+++ b/battcn-user/pom.xml
@@ -3,16 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.battcn</groupId>
+        <artifactId>battcn</artifactId>
+        <version>1.1.0</version>
     </parent>
     <groupId>com.battcn</groupId>
     <artifactId>battcn-user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>battcn-user</name>
-    <description>Battcn Spring Cloud Gateway ....</description>
+    <description>用户管理模块</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,18 +24,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>com.battcn</groupId>
+            <artifactId>oauth2-spring-cloud-starter</artifactId>
+            <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.security.oauth.boot</groupId>
-            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
