--- a/battcn-auth/src/main/resources/bootstrap.yml
+++ b/battcn-auth/src/main/resources/bootstrap.yml
@@ -3,6 +3,12 @@ server:
 spring:
   application:
     name: battcn-auth
+  datasource:
+    url: jdbc:mysql://localhost:3306/battcn?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.zaxxer.hikari.HikariDataSource
   redis:
     host: 106.14.253.83
     database: 2
