--- a/battcn-framework/oauth2-framework-starter/pom.xml
+++ b/battcn-framework/oauth2-framework-starter/pom.xml
@@ -8,8 +8,8 @@
         <artifactId>battcn-framework</artifactId>
         <version>1.1.0</version>
     </parent>
-    <groupId>com.battcn</groupId>
-    <artifactId>oauth2-spring-cloud-starter</artifactId>
+    <groupId>com.battcn.framework</groupId>
+    <artifactId>oauth2-framework-starter</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
 
