--- a/battcn-order/pom.xml
+++ b/battcn-order/pom.xml
@@ -29,8 +29,8 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.battcn</groupId>
-            <artifactId>oauth2-spring-cloud-starter</artifactId>
+            <groupId>com.battcn.framework</groupId>
+            <artifactId>oauth2-framework-starter</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
