--- a/battcn-user/pom.xml
+++ b/battcn-user/pom.xml
@@ -26,8 +26,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.battcn</groupId>
-            <artifactId>oauth2-spring-cloud-starter</artifactId>
+            <groupId>com.battcn.framework</groupId>
+            <artifactId>oauth2-framework-starter</artifactId>
             <version>1.0.0</version>
         </dependency>
 
