--- a/battcn-gateway/src/main/resources/bootstrap.yml
+++ b/battcn-gateway/src/main/resources/bootstrap.yml
@@ -1,3 +1,5 @@
+server:
+  port: 9000
 spring:
   application:
     name: battcn-gateway
@@ -6,14 +8,30 @@ spring:
       config:
         server-addr: localhost:8848
         ext-config:
-#          - refresh: true
-#            data-id: app.properties
-#            group: multi-data-ids
       discovery:
         server-addr: localhost:8848
     gateway:
       routes:
-        - id: auth
+        - id: battcn-order
+          uri: lb://battcn-order
+          predicates:
+            - Path=/order/**
+        - id: battcn-auth
           uri: lb://battcn-auth
           predicates:
-            - Path=/**
+            - Path=/auth/**
+
+# 不校验验证码终端
+ignore:
+  clients:
+    - test
+    - inner
+  swagger-providers:
+    - battcn-auth
+#swagger公共信息
+swagger:
+  enabled: false
+logging:
+  level:
+    com.battcn: debug
+    org.springframework.security: DEBUG
