--- a/battcn-order/pom.xml
+++ b/battcn-order/pom.xml
@@ -34,6 +34,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.battcn.framework</groupId>
+            <artifactId>swagger-framework-starter</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
