--- a/battcn-order/src/main/resources/bootstrap.yml
+++ b/battcn-order/src/main/resources/bootstrap.yml
@@ -1,4 +1,7 @@
-
+server:
+  port: 8020
+  servlet:
+    context-path: /order
 spring:
   application:
     name: battcn-order
@@ -17,12 +20,11 @@ spring:
     allow-bean-definition-overriding: true
   cache:
     type: redis
-server:
-  port: 8020
+
 logging:
   level:
     com.battcn: debug
-    org.springframework.security: TRACE
+    org.springframework.security: DEBUG
 security:
   oauth2:
     client:
@@ -31,11 +33,36 @@ security:
       scope: server
       grant-type: client_credentials,password
       access-token-uri: http://battcn-auth/oauth/token
+      ignore-urls:
+        - /actuator/**  #匿名访问
+        - /v2/api-docs #匿名访问
+        - /favicon.ico
     resource:
       loadBalanced: true
       #token-info-uri: http://battcn-auth/oauth/check_token
       user-info-uri: http://battcn-auth/users/info
       prefer-token-info: false
+#swagger公共信息
+swagger:
+  title: battcn-order api
+  description: 订单聚合文档
+  version: 2.0.0
+  license: Powered By battcn
+  licenseUrl: https://blog.battcn.com/
+  terms-of-service-url: https://blog.battcn.com/
+  contact:
+    name: Levin
+    email: 1837307557@qq.com
+  authorization:
+    name: Battcn OAuth
+    auth-regex: ^.*$
+    authorization-scope-list:
+      - scope: server
+        description: server all
+    token-url-list:
+      - http://localhost:9000/auth/oauth/token
+
+
 feign:
   hystrix:
     enabled: true
