支持 传统账号和手机号两种方式 支持短信登陆

--- a/battcn-gateway/src/main/resources/bootstrap.yml
+++ b/battcn-gateway/src/main/resources/bootstrap.yml
@@ -41,7 +41,7 @@ spring:
         - id: battcn-auth
           uri: lb://battcn-auth
           predicates:
-            - Path=/battcn-auth/**
+            - Path=/auth/**
           filters:
             - StripPrefix=1
 
