--- a/battcn-gateway/src/main/resources/bootstrap.yml
+++ b/battcn-gateway/src/main/resources/bootstrap.yml
@@ -44,13 +44,18 @@ spring:
             # filter 名称必须是 RequestRateLimiter
             - name: RequestRateLimiter
               args:
-                redis-rate-limiter.replenishRate: 100   # 允许用户每秒处理多少个请求
+                redis-rate-limiter.replenishRate: 500   # 允许用户每秒处理多少个请求
                 redis-rate-limiter.burstCapacity: 1000   # 令牌桶的容量，允许在一秒钟内完成的最大请求数
                 # 使用 IP 限流策略（使用 SpEL 按名称引用 bean）
                 key-resolver: "#{@ipKeyResolver}"
             # （配置1）http://localhost:9000/order/v2/api-docs 会被清洗成 http://localhost:9000/v2/api-docs
             # （配置2）http://localhost:9000/order/test/v2/api-docs 会被清洗成 http://localhost:9000/v2/api-docs
             - StripPrefix=1
+            # 降级配置
+            - name: Hystrix
+              args:
+                name: default
+                fallbackUri: 'forward:/fallback'
         - id: battcn-auth
           uri: lb://battcn-auth
           predicates:
@@ -72,3 +77,21 @@ logging:
     com.battcn: debug
     org.springframework.security: DEBUG
     org.springframework.cloud: DEBUG
+
+
+
+# hystrix 配置
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          strategy: SEMAPHORE
+          thread:
+            timeoutInMilliseconds: 60000
+  shareSecurityContext: true
+
+#请求处理的超时时间
+ribbon:
+  ReadTimeout: 10000
+  ConnectTimeout: 10000
