add storage project

--- a/battcn-framework/pom.xml
+++ b/battcn-framework/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>oauth2-framework-starter</module>
         <module>swagger-framework-starter</module>
+        <module>storage-framework-starter</module>
     </modules>
 
 </project>
