--- a/battcn-user/pom.xml
+++ b/battcn-user/pom.xml
@@ -20,7 +20,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.battcn.framework</groupId>
+            <artifactId>mybatis-framework-starter</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
