--- a/battcn-framework/mybatis-framework-starter/pom.xml
+++ b/battcn-framework/mybatis-framework-starter/pom.xml
@@ -14,10 +14,16 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <mysql.version>5.1.40</mysql.version>
     </properties>
 
 
     <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
