--- a/battcn-user/pom.xml
+++ b/battcn-user/pom.xml
@@ -21,9 +21,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.battcn.framework</groupId>
             <artifactId>mybatis-framework-starter</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.battcn.framework</groupId>
+            <artifactId>swagger-framework-starter</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
